--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/plugin-proposal-function-bind": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.11.0",
     "clean-webpack-plugin": "^1.0.0",
@@ -46,6 +47,8 @@
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-pxtorem": "^4.0.1",
     "react-hot-loader": "^4.8.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
