--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "author": "Genius-Liupan, CastileMan",
   "description": "Personal website for Panda",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.config.js",
-    "build": "webpack --config webpack.product.config.js",
+    "start": "webpack-dev-server --config webpack/webpack.dev.config.js",
+    "build": "webpack --config webpack/webpack.product.config.js",
     "publish": "git subtree split --prefix dist -b master && git push -f origin master:master && git branch -D master"
   },
   "dependencies": {
     "antd": "^3.16.1",
     "classnames": "^2.2.6",
+    "clipboard": "^2.0.6",
     "react": "^16.12.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.12.0",
@@ -30,10 +31,10 @@
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "@babel/plugin-proposal-export-default-from": "^7.8.3",
     "@babel/plugin-proposal-function-bind": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime-corejs2": "^7.0.0",
     "autoprefixer": "^9.7.4",
@@ -56,7 +57,8 @@
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.2"
   },
   "eslintConfig": {
     "extends": "react-app"
